# Epoch

./: .gitignore  EpochAlphaScope.md  EpochStack.md  README.md
ci/github/workflows/: validate.yml
data/generation/: default_alpha.json
docs/: alpha_final_implementation_spec.md  alpha_tech_stack_handoff.md  coding_standards.md  implementation_status.md  milestone_plan.md  save_format.md  simulation_api.md
docs/Prompts/: m1_task10_prompt.md  m1_task11_prompt.md  m1_task12_prompt.md  m1_task13_prompt.md  m1_task1_prompt.md  m1_task2_prompt.md  m1_task3_prompt.md  m1_task4_prompt.md  m1_task5_prompt.md  m1_task6_prompt.md  m1_task7_prompt.md  m1_task8_prompt.md  m1_task9_prompt.md
extension/: CMakeLists.txt
extension/include/godot_bridge/: alpha_world_bridge.hpp
extension/src/godot_bridge/: alpha_world_bridge.cpp  register_types.cpp
game/: export_presets.cfg  project.godot
game/addons/alpha/: alpha.gdextension  alpha.gdextension.uid
game/scenes/main/: app_root.tscn
game/scripts/app/: app_root.gd  app_root.gd.uid
game/scripts/data_view/: world_bridge.gd  world_bridge.gd.uid
sim/: CMakeLists.txt
sim/include/alpha/api/: constants.hpp  query_types.hpp  result_types.hpp  world_api.hpp
sim/include/alpha/core/: simulation.hpp
sim/include/alpha/map/: chunk_visuals.hpp  map_grid.hpp  map_types.hpp  overlay_chunks.hpp
sim/include/alpha/projects/: project_progress.hpp  project_types.hpp
sim/include/alpha/save/: save_io.hpp
sim/include/alpha/settlements/: farm_plots.hpp  labor_state.hpp  settlement_types.hpp
sim/include/alpha/world/: ids.hpp  world_state.hpp
sim/include/alpha/zones/: zone_types.hpp
sim/src/api/: world_api.cpp
sim/src/core/: simulation.cpp
sim/src/map/: chunk_visuals.cpp  map_grid.cpp  overlay_chunks.cpp
sim/src/projects/: project_progress.cpp  project_types.cpp
sim/src/save/: save_io.cpp
sim/src/settlements/: farm_plots.cpp  labor_state.cpp  settlement_types.cpp
sim/src/world/: world_state.cpp
sim/src/zones/: zone_types.cpp
sim/tests/unit/: monthly_simulation_test.cpp  project_commands_test.cpp  save_load_roundtrip_test.cpp  world_api_smoke_test.cpp  zoning_commands_test.cpp
tools/scripts/: build_macos.sh  export_macos.sh  format.sh  run_tests.sh
